[package]
name = "AC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui = "0.25.0"
egui_extras = { version = "*", features = ["image", "all_loaders", "file", "svg"] }
env_logger = "0.10.1"
rfd = "0.12.1"
regex = "1.10.2"
serde_ini = "0.2.0"
serde = { version = "1.0.195", features = ["derive"] }
image = { version = "0.24.8", features = ["jpeg", "png"] }
epi = "0.17.0"

[profile.release]
strip = true
